@@ -1,4 +1,4 @@
 # All Devise controllers are inherited from here.
-class DeviseController < ApplicationController
+class DeviseController < Devise.parent_controller.constantize
   include Devise::Controllers::InternalHelpers
 end
